WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
110336
Fix definition of DatePickerClient::setValue()
https://bugs.webkit.org/show_bug.cgi?id=110336
Summary
Fix definition of DatePickerClient::setValue()
Alberto Garcia
Reported
2013-02-20 06:22:25 PST
The definition of DatePickerClient::setValue() does not match the prototype, it was probably taken from setValueAndClosePopup(). This was introduced in the patch for
bug 109897
:
http://trac.webkit.org/changeset/142987
Attachments
Patch
(1.26 KB, patch)
2013-02-20 06:24 PST
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-02-20 06:24:43 PST
Created
attachment 189305
[details]
Patch
WebKit Review Bot
Comment 2
2013-03-01 01:09:29 PST
Comment on
attachment 189305
[details]
Patch Clearing flags on attachment: 189305 Committed
r144426
: <
http://trac.webkit.org/changeset/144426
>
WebKit Review Bot
Comment 3
2013-03-01 01:09:34 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug