Fix definition of DatePickerClient::setValue() https://bugs.webkit.org/show_bug.cgi?id=110336

Patch by Alberto Garcia <albgarcia@rim.com> on 2013-03-01
Reviewed by Carlos Garcia Campos.

The definition of DatePickerClient::setValue() introduced in
r142987 does not match the prototype.

* WebCoreSupport/DatePickerClient.cpp:
(WebCore::DatePickerClient::setValue):

Canonical link: https://commits.webkit.org/129495@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@144426 268f45cc-cd09-0410-ab3c-d52691b4dbfc